--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#333333">
     <script src="lib/argon.js"></script>
     <script src="lib/three.min.js"></script>
+    <script src="lib/tween.min.js"></script>
     <script src="lib/CSS3DArgonRenderer.js"></script>
     <script src="lib/CSS3DArgonHUD.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
