--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,12 @@
 <body>
 <div id="info"><a href="http://delimited.io" target="_blank" rel="noopener">DELIMITED.IO</a> 100 SVG Charts - three.js
 </div>
-<div id="container"></div>
+<div id="container">
+    <div class="slide"><h1>Slide 1</h1></div>
+    <div class="slide"><h1>Slide 2</h1></div>
+    <div class="slide"><h1>Slide 3</h1></div>
+    <div class="slide"><h1>Slide 4</h1></div>
+</div>
 <div id="menu"></div>
 <div id="bottom">zoom | pan | rotate</div>
 <noscript>
