--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <script src="lib/tween.min.js"></script>
     <script src="lib/CSS3DArgonRenderer.js"></script>
     <script src="lib/CSS3DArgonHUD.js"></script>
+    <script src="lib/plotly.min.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>delimited.io</title>
@@ -17,12 +18,7 @@
 <body>
 <div id="info"><a href="http://delimited.io" target="_blank" rel="noopener">DELIMITED.IO</a> 100 SVG Charts - three.js
 </div>
-<div id="container">
-    <div class="slide"><h1>Slide 1</h1></div>
-    <div class="slide"><h1>Slide 2</h1></div>
-    <div class="slide"><h1>Slide 3</h1></div>
-    <div class="slide"><h1>Slide 4</h1></div>
-</div>
+<div id="container"></div>
 <div id="menu"></div>
 <div id="bottom">zoom | pan | rotate</div>
 <noscript>
