--- a/demo/plotly.js/index.html
+++ b/demo/plotly.js/index.html
@@ -3,5 +3,6 @@
 </head>
 <body>
 <div id="graph"></div>
+<div style="position: absolute; top: 2em; left: 1em; font-size: 3em">12345</div>
 <script src="./index.js"></script>
 </body>
