--- a/public/slides/anime/anime.html
+++ b/public/slides/anime/anime.html
@@ -1,4 +1,5 @@
 <div class="easings">
+    <div class="title">anime.js</div>
     <div class="output">
         <div class="visualizer-wrapper grid">
             <div class="axis x"></div>
