now with sunset

--- a/public/slides/anime/anime.html
+++ b/public/slides/anime/anime.html
@@ -1,4 +1,4 @@
-<div class="easings">
+<div class="easings anime">
     <div class="title">anime.js</div>
     <div class="output">
         <div class="visualizer-wrapper grid">
