--- a/public/slides/velocity/velocity.html
+++ b/public/slides/velocity/velocity.html
@@ -1,5 +1,5 @@
 <div>
-
+	<div class="title velocity">Velocity.js</div>
     <script type="text/javascript">
         WebFontConfig = {
             google: {families: ['Open+Sans:400italic,400,700,300:latin']}
