--- a/demo/dynamic.js/index.html
+++ b/demo/dynamic.js/index.html
@@ -8,6 +8,8 @@
 <!doctype html>
 <link rel="stylesheet" href="dots.css">
 <link rel="stylesheet" href="button.css">
+<link rel="stylesheet" href="spinner.css">
+<link rel="stylesheet" href="pin.css">
 <script src="./dynamics.js"></script>
 <div id="dot-example">
     <div class="loader">
@@ -24,7 +26,40 @@
         <span>Button</span>
     </button>
 </div>
+<div id="spinner-example">
+    <svg class="spinner" version="1.1" xmlns="http://www.w3.org/2000/svg" width="120" height="120">
+        <defs>
+            <clipPath id="clipPath">
+                <circle cx="60" cy="60" r="55"/>
+            </clipPath>
+        </defs>
+        <g class="background">
+            <g transform="translate(120, 0) scale(-1, 1)">
+                <circle class="line" cx="60" cy="60" r="50" clip-path="url(#clipPath)"/>
+                <g transform="translate(95, 45)">
+                    <path class="arrow" d="M1 16L14.2 0l13.2 15.8H1z"/>
+                </g>
+                <g transform="translate(25, 75) rotate(180)">
+                    <path class="arrow" d="M1 16L14.2 0l13.2 15.8H1z"/>
+                </g>
+            </g>
+        </g>
+        <g class="tick" transform="rotate(-45, 60, 60)">
+            <path fill="white" d="M17.977 35.553L0 16.276l5.112-4.768 17.727 19.01L52.31 0l4.93 4.76L22.83 40.39l-.316-.305-.168.156-2.98-3.194-1.465-1.416.074-.077z" transform="translate(28, 40) scale(1.15)" fill-rule="evenodd"/>
+        </g>
+    </svg>
+</div>
+<div id="pin-example">
+    <div class="pin">
+        <svg width="76" height="107" viewBox="0 0 76 107" xmlns="http://www.w3.org/2000/svg">
+            <path d="M38 106.7c2.4 0 37.7-43 37.8-68.8 0-21-17-38-38-38C17 0 0 17 0 38c.4 27 35.4 68.7 38 68.7z" fill="#EC1A0A"/>
+            <ellipse fill="#FFF" cx="38.1" cy="38.1" rx="23.1" ry="23.1"/>
+        </svg>
+    </div>
+</div>
 <script src="dots.js"></script>
 <script src="button.js"></script>
+<script src="spinner.js"></script>
+<script src="pin.js"></script>
 </body>
 </html>
