dynamics demo finished

--- a/demo/dynamic.js/index.html
+++ b/demo/dynamic.js/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="button.css">
 <link rel="stylesheet" href="spinner.css">
 <link rel="stylesheet" href="pin.css">
+<link rel="stylesheet" href="basics.css">
 <script src="./dynamics.js"></script>
 <div id="dot-example">
     <div class="loader">
@@ -57,9 +58,13 @@
         </svg>
     </div>
 </div>
+<div id="example">
+    <div id="triangle"></div>
+</div>
 <script src="dots.js"></script>
 <script src="button.js"></script>
 <script src="spinner.js"></script>
 <script src="pin.js"></script>
+<script src="basics.js"></script>
 </body>
 </html>
