pause+resume (cont.)

--- a/public/slides/dynamics/dynamics.html
+++ b/public/slides/dynamics/dynamics.html
@@ -54,6 +54,7 @@
     <div id="example">
         <div id="triangle"></div>
     </div>
+    <script src="./slides/dynamics/pauseResume.js"></script>
     <script src="./slides/dynamics/dots.js"></script>
     <script src="./slides/dynamics/button.js"></script>
     <script src="./slides/dynamics/spinner.js"></script>
