--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="./css/material-icons.css"/>
 
-    <script src="lib/argon.orig.js"></script>
+    <script src="lib/argon-1.4.0.js"></script>
     <script src="lib/three.min.js"></script>
     <script src="lib/tween.min.js"></script>
     <script src="lib/CSS3DArgonRenderer.js"></script>
