--- a/demo/AnimatedOpeningType/index.html
+++ b/demo/AnimatedOpeningType/index.html
@@ -15,52 +15,28 @@
 		<script src="js/modernizr.custom.js"></script>
 	</head>
 	<body>
-		<div class="container">
-			<div class="component">
+		<div class="">
+			<div class="">
 				<ul class="grid">
-					<li><div class="codrops-header"><h1>Animated Opening Type</h1><a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/ElasticStack/"><span>Previous Demo</span></a><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=16966"><span>Codrops Article</span></a></div></li>
-					<li class="ot-letter-left"><span data-letter="C">C</span></li>
-					<li class="ot-letter-top"><span data-letter="J">J</span></li>
-					<li class="ot-letter-right"><span data-letter="8">8</span></li>
-					<li class="ot-letter-bottom"><span data-letter="A">A</span></li>
-					<li class="ot-letter-left"><span data-letter="O">O</span></li>
-					<li class="ot-letter-left"><span data-letter="Q">Q</span></li>
-					<li class="ot-letter-right"><span data-letter="S">S</span></li>
-					<li class="ot-letter-left"><span data-letter="B">B</span></li>
-					<li class="ot-letter-top"><span data-letter="L">L</span></li>
-					<li class="ot-letter-right"><span data-letter="T">T</span></li>
-					<li class="ot-letter-left"><span data-letter="K">K</span></li>
-					<li class="ot-letter-top"><span data-letter="S">S</span></li>
-					<li class="ot-letter-left"><span data-letter="Z">Z</span></li>
-					<li class="ot-letter-top"><span data-letter="3">3</span></li>
-					<li class="ot-letter-right"><span data-letter="D">D</span></li>
-					<li class="ot-letter-bottom"><span data-letter="I">I</span></li>
-					<li class="ot-letter-right"><span data-letter="H">H</span></li>
-					<li class="ot-letter-bottom"><span data-letter="Q">Q</span></li>
-					<li class="ot-letter-right"><span data-letter="E">E</span></li>
-					<li class="ot-letter-left"><span data-letter="A">A</span></li>
-					<li class="ot-letter-top"><span data-letter="P">P</span></li>
-					<li class="ot-letter-right"><span data-letter="F">F</span></li>
-					<li class="ot-letter-left"><span data-letter="S">S</span></li>
-					<li class="ot-letter-top"><span data-letter="K">K</span></li>
-					<li class="ot-letter-left"><span data-letter="U">U</span></li>
-					<li class="ot-letter-top"><span data-letter="L">L</span></li>
-					<li class="ot-letter-right"><span data-letter="6">6</span></li>
-					<li class="ot-letter-bottom"><span data-letter="R">R</span></li>
-					<li class="ot-letter-left"><span data-letter="O">O</span></li>
-					<li class="ot-letter-bottom"><span data-letter="V">V</span></li>
-					<li class="ot-letter-right"><span data-letter="S">S</span></li>
-					<li class="ot-letter-left"><span data-letter="Q">Q</span></li>
-					<li class="ot-letter-top"><span data-letter="J">J</span></li>
-					<li class="ot-letter-right"><span data-letter="G">G</span></li>
-					<li class="ot-letter-left"><span data-letter="R">R</span></li>
+					<li class="ot-letter-left"><span data-letter="3">3</span></li>
+					<li class="ot-letter-top"><span data-letter="D">D</span></li>
 				</ul>
 			</div>
-			<section class="related">
-				<p>If you enjoy this you might also like:</p>
-				<div><a href="http://tympanus.net/Tutorials/3DShadingWithBoxShadows/"><h4>3D Shading with Box-Shadows</h4></a></div>
-				<div><a href="http://tympanus.net/Tutorials/HexaFlip/"><h4>HexaFlip: 3D Cube Plugin</h4></a></div>
-			</section>
 		</div><!-- /container -->
-	</body>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		<p></p><br>
+		123
 </html>
