--- a/public/slides/dynamics/dynamics.html
+++ b/public/slides/dynamics/dynamics.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./slides/dynamics/pin.css">
     <link rel="stylesheet" href="./slides/dynamics/basics.css">
     <script src="./slides/dynamics/dynamics.js"></script>
+    <div class="title dark">Dynamics.js</div>
     <div id="dot-example">
         <div class="loader">
             <div class="dot"></div>
