--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="lib/tween.min.js"></script>
     <script src="lib/CSS3DArgonRenderer.js"></script>
     <script src="lib/CSS3DArgonHUD.js"></script>
-    <script src="lib/plotly.min.js"></script>
+    <!--<script src="lib/plotly.min.js"></script>-->
 
     <script src="lib/jquery.js"></script>
 
