--- a/demo/velocity/index.html
+++ b/demo/velocity/index.html
@@ -1323,12 +1323,9 @@
 
     <div class="stars"></div>
 
-        </script>
-
     </body>
 </html>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='http://cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js'></script>
+<script src='./lib/velocity.min.js'></script>
 
   
 
