--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,8 @@
     <script src="lib/tween.min.js"></script>
     <script src="lib/CSS3DArgonRenderer.js"></script>
     <script src="lib/CSS3DArgonHUD.js"></script>
-    <!--<script src="lib/plotly.min.js"></script>-->
-
     <script src="lib/jquery.js"></script>
+    <script src="lib/d3.js"></script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
