--- a/public/slides/3dd3/css3d/index.html
+++ b/public/slides/3dd3/css3d/index.html
@@ -9,12 +9,18 @@
 <body>
 
 <div class="title">
-    <div class="char font-effect-anaglyph">c</div>
+    <div class="char _1 font-effect-anaglyph">c</div>
     <div class="char font-effect-anaglyph">s</div>
     <div class="char font-effect-anaglyph">s</div>
     <div class="char font-effect-anaglyph">3</div>
     <div class="char font-effect-anaglyph">d</div>
 </div>
+
+<script>
+
+    window.slidAR.highlight.lightBorder("div.char._1");
+
+</script>
 
 </body>
 </html>
