bugfix in classUtil

--- a/public/slides/3dd3/title/index.html
+++ b/public/slides/3dd3/title/index.html
@@ -20,7 +20,7 @@
 </style>
 <body>
 
-<div class="title">
+<div class="title slide-title">
     <div class="char font-effect-anaglyph">3</div>
     <div class="char font-effect-anaglyph">D</div>
     <div class="char font-effect-anaglyph">+</div>
@@ -37,7 +37,7 @@
 <script>
 
     setTimeout(function () {
-        window.slidAR.classUtil.setClass("div.char", "xaxis", 100);
+        window.slidAR.classUtil.setClass(".slide-title div.char", "xaxis", 100);
     }, 3000);
 
 </script>
