--- a/public/slides/3dd3/css3d/index.html
+++ b/public/slides/3dd3/css3d/index.html
@@ -18,7 +18,9 @@
 
 <script>
 
-    window.slidAR.highlight.lightBorder("div.char._1");
+    setTimeout(function() {
+        window.slidAR.highlight.animatedBorder("div.char._1", window.slidAR.highlight.DARK_COLOR_CLASS);
+    }, 1000)
 
 </script>
 
