--- a/public/slides/3dd3/css3d/index.html
+++ b/public/slides/3dd3/css3d/index.html
@@ -22,6 +22,10 @@
         window.slidAR.highlight.animatedBorder("div.char._1", window.slidAR.highlight.DARK_COLOR_CLASS);
     }, 1000)
 
+    setTimeout(function () {
+        window.slidAR.tooltip.create("<div class='_1'/>", "div._1", window.slidAR.tooltip.TOP);
+    }, 2000)
+
 </script>
 
 </body>
