--- a/public/slides/3dd3/css3d/index.html
+++ b/public/slides/3dd3/css3d/index.html
@@ -23,7 +23,7 @@
     }, 1000)
 
     setTimeout(function () {
-        window.slidAR.tooltip.create("<div class='_1'/>", "div._1", window.slidAR.tooltip.TOP);
+        window.slidAR.tooltip.create("div._1", "div._1", window.slidAR.tooltip.TOP);
     }, 2000)
 
 </script>
