--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#333333">
 
     <link rel="stylesheet" type="text/css" href="./css/material-icons.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/popper.css"/>
 
     <script src="lib/argon-1.4.0.js"></script>
     <script src="lib/three.min.js"></script>
