--- a/public/slides/3dd3/title/index.html
+++ b/public/slides/3dd3/title/index.html
@@ -20,6 +20,8 @@
 </style>
 <body>
 
+<div class="slidecounter"></div>
+
 <div class="title slide-title">
     <div class="char font-effect-anaglyph">3</div>
     <div class="char font-effect-anaglyph">D</div>
