fix some problems with the tooltips

--- a/public/slides/3dd3/css3d/index.html
+++ b/public/slides/3dd3/css3d/index.html
@@ -11,7 +11,7 @@
 <div class="slidecounter"></div>
 
 <div class="title">
-    <div class="char char1 font-effect-anaglyph">c</div>
+    <span class="char1"><div class="char char1 font-effect-anaglyph">c</div></span>
     <div class="char font-effect-anaglyph">s</div>
     <div class="char font-effect-anaglyph">s</div>
     <div class="char font-effect-anaglyph">3</div>
@@ -30,7 +30,7 @@
         }
 
         function step2() {
-            window.slidAR.tooltip.createPt("div.char1", ".title div.char.char1", window.slidAR.tooltip.TOP);
+            window.slidAR.tooltip.createPt("div.char1", ".title span.char1", window.slidAR.tooltip.TOP);
         }
 
         function _step2() {
