--- a/public/slides/3dd3/css3d/index.html
+++ b/public/slides/3dd3/css3d/index.html
@@ -34,7 +34,7 @@
         }
 
         function _step2() {
-            window.slidAR.tooltip.removePt(".title div.char.char1", window.slidAR.tooltip.TOP);
+            window.slidAR.tooltip.removePt(".title span.char1", window.slidAR.tooltip.TOP);
         }
 
         window.slidAR.steps.set([
