simplAR: first page added

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         $.protip();
     });
 </script>
-<script src="../public/js/simplAR.js"></script>
+<script src="../js/pages.js"></script>
+<script src="../js/simplAR.js"></script>
 </body>
 </html>
