--- a/public/html/html1.html
+++ b/public/html/html1.html
@@ -1,3 +1,6 @@
+<link href="https://fonts.googleapis.com/css?family=Montserrat&effect=anaglyph" rel="stylesheet">
+<link href="./slides/3dd3/style.css" rel="stylesheet">
+
 <div class="html1">
     <div class="char font-effect-anaglyph">H</div>
     <div class="char font-effect-anaglyph">T</div>
