--- a/public/code/html1.html
+++ b/public/code/html1.html
@@ -1,5 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat&effect=anaglyph" rel="stylesheet">
-<link href="./html/style.css" rel="stylesheet">
+<link href="./code/style.css" rel="stylesheet">
 
 <div class="html1 title">
     <div class="char font-effect-anaglyph">H</div>
