--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         $.protip();
     });
 </script>
-<script src="../js/pages.js"></script>
+<script src="../code/pages.js"></script>
 <script src="../js/simplAR.js"></script>
 </body>
 </html>
