--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     });
 </script>
 <script src="../code/pages.js"></script>
+<script src="../code/code.js"></script>
 <script src="../js/simplAR.js"></script>
 </body>
 </html>
