add proxy on package.json

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
         $.protip();
     });
 </script>
-<script src="../code/pages.js"></script>
-<script src="../code/code.js"></script>
-<script src="../js/simplAR.js"></script>
+<script src="../public/code/pages.js"></script>
+<script src="../public/code/code.js"></script>
+<script src="../public/js/simplAR.js"></script>
 </body>
 </html>
