--- a/public/slides/3dd3/html/css3d.html
+++ b/public/slides/3dd3/html/css3d.html
@@ -37,7 +37,7 @@
             window.slidAR.tooltip.removePt(".title span.char1", window.slidAR.tooltip.TOP);
         }
 
-        window.slidAR.steps.set([
+        window.slidAR.steps.set("css3d", [
             {f: step1, b: _step1},
             {f: step2, b: _step2}
         ])
