--- a/public/slides/3dd3/html/title.html
+++ b/public/slides/3dd3/html/title.html
@@ -46,7 +46,7 @@
             window.slidAR.classUtil.removeClass(".slide-title div.char", "xaxis");
         }
 
-        window.slidAR.steps.set([
+        window.slidAR.steps.set("title", [
             {f: step1, b: _step1}
         ]);
     })()
