showCode with Prism

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
     <link rel="stylesheet" type="text/css" href="./css/material-icons.css"/>
     <link rel="stylesheet" type="text/css" href="./css/protip.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/prism.css">
 
     <script src="lib/argon-1.4.0.js"></script>
     <script src="lib/three.min.js"></script>
