--- a/public/slides/3dd3/html/title.html
+++ b/public/slides/3dd3/html/title.html
@@ -17,37 +17,67 @@
     .xaxis {
         animation: xaxis 6s infinite ease-in-out;
     }
+
+    @keyframes totaly {
+        0% { transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+        100% { transform: rotateX(0deg) rotateY(360deg) rotateZ(0deg); }
+    }
+
+    .totaly {
+        animation: totaly 10s infinite ease-in-out;
+    }
+
+    @keyframes totalz {
+        0% { transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+        100% { transform: rotateX(0deg) rotateY(0deg) rotateZ(360deg); }
+    }
+
+    .totalz {
+        animation: totalz 20s infinite ease-in-out;
+    }
 </style>
 <body>
 
 <div class="slidecounter"></div>
 
 <div class="title slide-title">
-    <div class="char font-effect-anaglyph">3</div>
-    <div class="char font-effect-anaglyph">D</div>
-    <div class="char font-effect-anaglyph">+</div>
-    <div class="char font-effect-anaglyph">c</div>
-    <div class="char font-effect-anaglyph">s</div>
-    <div class="char font-effect-anaglyph">s</div>
-    <div class="char font-effect-anaglyph">3</div>
-    <div class="char font-effect-anaglyph">d</div>
-    <div class="char font-effect-anaglyph">+</div>
-    <div class="char font-effect-anaglyph">D</div>
-    <div class="char font-effect-anaglyph">3</div>
+    <div id="totalz">
+        <div id="totaly">
+            <div class="char font-effect-anaglyph">D</div>
+            <div class="char font-effect-anaglyph">O</div>
+            <div class="char font-effect-anaglyph">M</div>
+            <div class="char font-effect-anaglyph">b</div>
+            <div class="char font-effect-anaglyph">a</div>
+            <div class="char font-effect-anaglyph">s</div>
+            <div class="char font-effect-anaglyph">e</div>
+            <div class="char font-effect-anaglyph">d</div>
+            <div class="char font-effect-anaglyph">A</div>
+            <div class="char font-effect-anaglyph">R</div>
+        </div>
+    </div>
 </div>
 
 <script>
     (function () {
-        function step1() {
+        function animate() {
             slidAR.classUtil.setClass(".slide-title div.char", "xaxis", 100);
+            setTimeout(function () {
+                slidAR.classUtil.setClass("#totaly", "totaly");
+            }, 10000);
+            setTimeout(function () {
+                slidAR.classUtil.setClass("#totalz", "totalz");
+            }, 20000);
         }
 
-        function _step1() {
+        function _animate() {
             slidAR.classUtil.removeClass(".slide-title div.char", "xaxis");
+            slidAR.classUtil.removeClass("#totaly", "totaly");
+            slidAR.classUtil.removeClass("#totalz", "totalz");
         }
 
-        window.slidAR.steps.set("title", [
-            {f: step1, b: _step1}
+
+        slidAR.steps.set("title", [
+            {f: animate, b: _animate},
         ]);
     })()
 </script>
