--- a/public/slides/3dd3/html/cube.html
+++ b/public/slides/3dd3/html/cube.html
@@ -15,21 +15,40 @@
         color: white;
     }
 
-    .back {
-        transform: rotateY(-180deg) translateZ(100px);
-    }
-
     @keyframes animate-back {
-        0% {transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) translateZ(0px);}
-        100% {transform: rotateX(0deg) rotateY(-180deg) rotateZ(0deg) translateZ(100px);}
+        100% {transform: rotateY(-180deg) translateZ(100px);}
     }
 
     .animate-back {
         animation: animate-back 1s ease-in-out;
+        animation-fill-mode: forwards;
     }
+
+    #cube-top {
+        background-color: #4a148c;
+        color: white;
+    }
+
+    @keyframes animate-top {
+        100% {transform: translateY(100px) rotateX(90deg) translateZ(100px)}
+    }
+
+    .animate-top {
+        animation: animate-top 1s ease-in-out;
+        animation-fill-mode: forwards;
+    }
+
+    #_cube {
+        transform: rotateX(50deg);
+        transform-origin: 40% 40%;
+    }
+
 </style>
 
-<div id="cube-back" class="cube-side">Back</div>
+<div id="_cube">
+    <span></span>
+    <!--<div id="cube-back" class="cube-side">Back</div>-->
+</div>
 
 <div id="code"></div>
 
@@ -40,10 +59,19 @@
             "        transform: rotateY(-180deg) translateZ(100px);\n" +
             "    }")
 
+        const topCodeStep = slidAR.showCode.cssStepWithReverse("#code", ".top {\n" +
+            "        translateY(100px) rotateX(90deg) translateZ(100px)\n" +
+            "    }")
+
         slidAR.steps.set("cube", [
+            slidAR.createElement.divStep("#_cube span", "cube-back", ["cube-side"], "Back"),
             backCodeStep.step,
-            slidAR.classUtil.set2ClassesStep("#cube-back", "animate-back", "back"),
-            backCodeStep.reverseStep
+            slidAR.classUtil.setClassStep("#cube-back", "animate-back"),
+            backCodeStep.reverseStep,
+            slidAR.createElement.divStep("#_cube", "cube-top", ["cube-side"], "Top"),
+            topCodeStep.step,
+            slidAR.classUtil.setClassStep("#cube-top", "animate-top"),
+            topCodeStep.reverseStep
         ])
     })()
 
