--- a/public/slides/3dd3/html/cube.html
+++ b/public/slides/3dd3/html/cube.html
@@ -1,12 +1,29 @@
 <style>
 
-    .cube-side {
+    #cube-container {
         width: 200px;
         height: 200px;
         position: absolute;
-        top: 40%;
-        left: 40%;
+        top: 40vh;
+        left: 40vw;
         font-size: 3em;
+        perspective: 800px;
+    }
+
+    #_cube {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        transform-style: preserve-3d;
+        /* animation: cube-animation 10s infinite ease-in-out; */
+    }
+
+    .cube-side {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        margin: 0;
+        display: block;
         opacity: 0.5;
     }
 
@@ -30,7 +47,7 @@
     }
 
     @keyframes animate-top {
-        100% {transform: translateY(100px) rotateX(90deg) translateZ(100px)}
+        100% {transform: rotateX(90deg) translateZ(100px)}
     }
 
     .animate-top {
@@ -38,16 +55,41 @@
         animation-fill-mode: forwards;
     }
 
-    #_cube {
-        transform: rotateX(50deg);
-        transform-origin: 40% 40%;
+    #cube-bottom {
+        background-color: #9e9d24;
+        color: black;
+    }
+
+    @keyframes animate-bottom {
+        100% {transform: rotateX(-90deg) translateZ(100px)}
+    }
+
+    .animate-bottom {
+        animation: animate-bottom 1s ease-in-out;
+        animation-fill-mode: forwards;
+    }
+
+    #cube-left {
+        background-color: #37474f;
+        color: white;
+    }
+
+    @keyframes animate-left {
+        100% {transform: rotateY(-90deg) translateZ(100px)}
+    }
+
+    .animate-left {
+        animation: animate-left 1s ease-in-out;
+        animation-fill-mode: forwards;
     }
 
 </style>
 
-<div id="_cube">
-    <span></span>
-    <!--<div id="cube-back" class="cube-side">Back</div>-->
+<div id="cube-container">
+    <div id="_cube">
+        <span></span>
+        <!--<div id="cube-back" class="cube-side">Back</div>-->
+    </div>
 </div>
 
 <div id="code"></div>
@@ -60,7 +102,15 @@
             "    }")
 
         const topCodeStep = slidAR.showCode.cssStepWithReverse("#code", ".top {\n" +
-            "        translateY(100px) rotateX(90deg) translateZ(100px)\n" +
+            "        rotateX(90deg) translateZ(100px)\n" +
+            "    }")
+
+        const bottomCodeStep = slidAR.showCode.cssStepWithReverse("#code", ".bottom {\n" +
+            "        rotateX(-90deg) translateZ(100px)\n" +
+            "    }")
+
+        const leftCodeStep = slidAR.showCode.cssStepWithReverse("#code", ".bottom {\n" +
+            "        rotateY(-90deg) translateZ(100px)\n" +
             "    }")
 
         slidAR.steps.set("cube", [
@@ -68,10 +118,18 @@
             backCodeStep.step,
             slidAR.classUtil.setClassStep("#cube-back", "animate-back"),
             backCodeStep.reverseStep,
-            slidAR.createElement.divStep("#_cube", "cube-top", ["cube-side"], "Top"),
+            slidAR.createElement.divStep("#_cube span", "cube-top", ["cube-side"], "Top"),
             topCodeStep.step,
             slidAR.classUtil.setClassStep("#cube-top", "animate-top"),
-            topCodeStep.reverseStep
+            topCodeStep.reverseStep,
+            slidAR.createElement.divStep("#_cube span", "cube-bottom", ["cube-side"], "Bottom"),
+            bottomCodeStep.step,
+            slidAR.classUtil.setClassStep("#cube-bottom", "animate-bottom"),
+            bottomCodeStep.reverseStep,
+            slidAR.createElement.divStep("#_cube span", "cube-left", ["cube-side"], "Left"),
+            leftCodeStep.step,
+            slidAR.classUtil.setClassStep("#cube-left", "animate-left"),
+            leftCodeStep.reverseStep,
         ])
     })()
 
