--- a/public/slides/3dd3/html/cube.html
+++ b/public/slides/3dd3/html/cube.html
@@ -111,6 +111,14 @@
         animation-fill-mode: forwards;
     }
 
+    @keyframes animate-cube {
+        100% {transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)}
+    }
+
+    .animate-cube {
+        animation: animate-cube 10s infinite ease-in-out;
+    }
+
 </style>
 
 <div id="cube-container">
@@ -123,6 +131,7 @@
 <div id="code"></div>
 
 <script>
+
     (function () {
 
         const backCodeStep = slidAR.showCode.cssStepWithReverse("#code", ".back {\n" +
@@ -149,6 +158,27 @@
             "        translateZ(100px)\n" +
             "    }")
 
+        const keyframeCodeStep = slidAR.showCode.cssStep("#cube" , "    @keyframes animate-cube {\n" +
+            "        100% {transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)}\n" +
+            "    }\n" +
+            "\n" +
+            "    .cube {\n" +
+            "        animation: animate-cube 10s infinite ease-in-out;\n" +
+            "    }\n");
+
+        const borderStep = slidAR.highlight.darkBorderStep("#_cube");
+        const tooltipStep = slidAR.tooltip.createPtStep("div.cube", "#cube", slidAR.tooltip.TOP);
+
+        function borderAndTooltip() {
+            borderStep.f();
+            tooltipStep.f();
+        }
+
+        function _borderAndTooltip() {
+            borderStep.b();
+            tooltipStep.b();
+        }
+
         slidAR.steps.set("cube", [
             slidAR.createElement.divStep("#_cube span", "cube-back", ["cube-side"], "Back"),
             backCodeStep.step,
@@ -174,6 +204,7 @@
             frontCodeStep.step,
             slidAR.classUtil.setClassStep("#cube-front", "animate-front"),
             frontCodeStep.reverseStep,
+            {f: borderAndTooltip, b: _borderAndTooltip}
         ])
     })()
 
