--- a/public/slides/3dd3/html/cube.html
+++ b/public/slides/3dd3/html/cube.html
@@ -158,7 +158,9 @@
             "        translateZ(100px)\n" +
             "    }")
 
-        const keyframeCodeStep = slidAR.showCode.cssStep("#cube" , "    @keyframes animate-cube {\n" +
+        const tooltipStep = slidAR.tooltip.createPtStepWithReverse("div.cube", "#_cube", slidAR.tooltip.TOP);
+
+        const keyframeCodeStep = slidAR.showCode.cssStep("#code", "    @keyframes animate-cube {\n" +
             "        100% {transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg)}\n" +
             "    }\n" +
             "\n" +
@@ -166,18 +168,6 @@
             "        animation: animate-cube 10s infinite ease-in-out;\n" +
             "    }\n");
 
-        const borderStep = slidAR.highlight.darkBorderStep("#_cube");
-        const tooltipStep = slidAR.tooltip.createPtStep("div.cube", "#cube", slidAR.tooltip.TOP);
-
-        function borderAndTooltip() {
-            borderStep.f();
-            tooltipStep.f();
-        }
-
-        function _borderAndTooltip() {
-            borderStep.b();
-            tooltipStep.b();
-        }
 
         slidAR.steps.set("cube", [
             slidAR.createElement.divStep("#_cube span", "cube-back", ["cube-side"], "Back"),
@@ -204,7 +194,10 @@
             frontCodeStep.step,
             slidAR.classUtil.setClassStep("#cube-front", "animate-front"),
             frontCodeStep.reverseStep,
-            {f: borderAndTooltip, b: _borderAndTooltip}
+            tooltipStep.step,
+            tooltipStep.reverseStep,
+            keyframeCodeStep,
+            slidAR.classUtil.setClassStep("#_cube", "animate-cube"),
         ])
     })()
 
