--- a/public/slides/3dd3/html/graph.html
+++ b/public/slides/3dd3/html/graph.html
@@ -22,7 +22,7 @@
         function pie() {
         }
 
-        slidAR.cube.create("#graphcube", 200)
+        slidAR.cube.createWithCanvas("#graphcube", 200)
         pie();
     })()
 
