--- a/public/slides/3dd3/html/graph.html
+++ b/public/slides/3dd3/html/graph.html
@@ -13,17 +13,22 @@
 <div id="graphcube">
 </div>
 
+<script src="./slides/3dd3/html/graph.js"></script>
 <script>
 
-    /* global c3 */
+    /* global Chart */
 
     (function () {
 
-        function pie() {
+        function createCube() {
+
         }
 
-        slidAR.cube.createWithCanvas("#graphcube", 200)
-        pie();
+        slidAR.steps.set("graph", [
+            slidAR.cube.createWithCanvasStep("#graphcube", 200),
+            {f: _graph_pie, b: _graph__pie}
+        ])
+
     })()
 
 
